adding password grant ATOM-199
